Feat/rabbit mq (#3)
# Changelog

- [x] update env
- [x] rabbit mq Listener
- [x] mqtt trigger geo fence
- [x] add geo fence function  
- [x] update docker file
